--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,12 @@
 		<link real="sylesheet" href="css/estilos.css" />
 	</head>
 	<body>
-		<h1>Aqui vamos a hacer un glog post</h1>
-		<p>Hola mundo como estan</p>
+		<div id = "container">
+			<div id ="post"
+				<h1>Aqui vamos a hacer un glog post</h1>
+				<p>Hola mundo como estan</p>
+			</div>
+		</div>
 	</body>
 
 </html>
