--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,10 @@
 	<body>
 		<div id = "container">
 			<div id="cabecera">
-				Cabecera
+				CBD
+				<span id="tagline">
+				Tu tienda de confianza
+				</spam>
 			</div>
 			<div id ="post"
 				<h1>Aqui vamos a hacer un glog post</h1>
