se agrego un nuevo parrafo al blog y se cambio el tipo de letra

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
 			<div id ="post"
 				<h1>Aqui vamos a hacer un glog post</h1>
 				<p>Hola mundo como estan</p>
+				<p>SLPC siempre va estar interezado quen tu puesdas dormir mejor </p>
 			</div>
 		</div>
 	</body>
