--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Rl titulo del post</titlr>
+		<title>Rl titulo del post</title>
 		<link real="sylesheet" href="css/estilos.css" />
 	</head>
 	<body>
