--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
 		<title>Rl titulo del post</title>
-		<link real="sylesheet" href="css/estilos.css" />
+		<link real="sylesheet" href="/Users/carlosservinolvera/Desktop/Data/Proyecto1/css
+		/estilos.css" />
 	</head>
 	<body>
 		<div id = "container">
