CAMBIO DE TIENDA DE CONFIANZA A TIENDA DE CBD

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 			<div id="cabecera">
 				CBD
 				<span id="tagline">
-				Tu tienda de confianza
+				Tu tienda de CBD
 				</spam>
 			</div>
 			<div id ="post"
