--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
 				<h1>Aqui vamos a hacer un glog post</h1>
 				<p>Hola mundo como estan</p>
 				<p>SLPC siempre va estar interezado quen tu puesdas dormir mejor </p>
+				<p>Compraaa</p>
 			</div>
 		</div>
 	</body>
