Una version del CBD

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Rl titulo del post</title>
+		<title>Super CBD</title>
 		<link real="sylesheet" href="/Users/carlosservinolvera/Desktop/Data/Proyecto1/css
 		/estilos.css" />
 	</head>
